Fix wish details alignments

--- a/src/assets/css/wish.css
+++ b/src/assets/css/wish.css
@@ -9,8 +9,8 @@
     height: 100%;
 }
 .ui.modal.wish-details.overlay.fullscreen > .content.content.content {
+    height: 100%;
     min-height: 0;
-    margin-bottom: auto;
 }
 
 /** Image */
